<resources>
    <string name="app_name">Mintain</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="already_registered_login_me">Already Registered. login me!</string>
    <string name="login">Login</string>
    <string name="not_a_member_get_registered_now">Not a member? Get registered now!</string>
    <string name="auth_failed">Problem with email or password</string>
    <string name="error">Error !</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="forgot_password_message">We just need your registered Email to send you password reset instructions</string>
    <string name="reset_btn">Reset</string>
    <string name="bottom_nav_bar_home">Discover</string>
    <string name="bottom_nav_bar_library">Library</string>
    <string name="bottom_nav_bar_activity">Activity</string>
    <string name="bottom_nav_bar_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_expand_bar">Discover</string>
    <string name="discover">Discover</string>
    <string name="you_should_read">You should read</string>
    <string name="curated_lists">Curated lists</string>
    <string name="trending">Trending</string>
    <string name="newMints">New</string>
    <string name="activity">Activity</string>
    <string name="profile_title">You</string>
</resources>
