<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_discover"
        android:layout_height="120dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_discover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar_discover"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_discover"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:title="@string/discover">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/shouldRead_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_should_read"
            android:textSize="16sp"
            android:padding="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/should_read_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/curated_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curated_lists"
            android:textSize="16sp"
            android:padding="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/curated_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/trending_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending"
            android:textSize="16sp"
            android:padding="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trending_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/new_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newMints"
            android:textSize="16sp"
            android:padding="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/new_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
